initial implementation approch for the handling of structures with optional fields and unions
implemented printing structs with optional fields. Tested with optstructs.bsd file.

implemented calculating binary size of structures with optional fields and encoding them. Also implemented printing the right padding for the first member of types with optional fields. Tested with optStructs_test.c

implemented decoding structures with optional fields. Tested with optStructs_test.c

Implemented calculating the binary size of unions. Tested in optStructs_test.c

Implemented encoding and decoding unions. Added returning 4 as binary size, if the SwitchField is too large to avoid later segmentation faults while en-/decoding. Tested with optStructs_test.c

Tested encoding and decoding structs with optional fields and unions with the RtlsLocationResult type from the AutoID nodeset. Works with other clients like UAExpert too now.

Implemented copying and clearing structures with optional fields and unions.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -171,6 +171,9 @@ endif()
 add_example(custom_datatype_client custom_datatype/client_types_custom.c)
 add_example(custom_datatype_server custom_datatype/server_types_custom.c)
 
+add_example(optStruct_union_server optStruct_union/server_optStruct_union.c)
+add_example(optStruct_union_client optStruct_union/client_optStruct_union.c)
+
 if(UA_ENABLE_NODEMANAGEMENT)
     add_example(access_control_server access_control/server_access_control.c)
     add_example(access_control_client access_control/client_access_control.c)
