feat(PubSub) XDP functionality with ETH over UADP
 - New transport settings added for XDP functionality
 - Moved both XDP config and xdpsocket to plugins
 - Default values for defines in plugin

Change-Id: Ibd7760c9abab45c6f37ae324fec6dabc853cf797

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ include(GNUInstallDirs)
 # Set when installed via make install
 set(open62541_TOOLS_DIR ${PROJECT_SOURCE_DIR}/tools)
 set(open62541_NODESET_DIR ${PROJECT_SOURCE_DIR}/deps/ua-nodeset)
+set(XDP_LIBRARY "/usr/local/src/bpf-next/tools/lib/bpf/libbpf.a")
 
 include(macros_internal)
 include(macros_public)
@@ -248,6 +249,14 @@ if(UA_ENABLE_PUBSUB_ETH_UADP)
     if (NOT CMAKE_SYSTEM MATCHES "Linux")
     message(FATAL_ERROR "UADP over Ethernet is only available on Linux.")
 	endif()
+endif()
+
+option(UA_ENABLE_PUBSUB_ETH_UADP_XDP "Enable Subscribe UADP over Ethernet using XDP" OFF)
+mark_as_advanced(UA_ENABLE_PUBSUB_ETH_UADP_XDP)
+if(UA_ENABLE_PUBSUB_ETH_UADP_XDP)
+    if (NOT CMAKE_SYSTEM MATCHES "Linux")
+        message(FATAL_ERROR "XDP is only available on Linux.")
+    endif()
 endif()
 
 option(UA_ENABLE_PUBSUB_DELTAFRAMES "Enable sending of delta frames with only the changes" OFF)
@@ -852,6 +861,14 @@ if(UA_ENABLE_PUBSUB)
     if(UA_ENABLE_PUBSUB_ETH_UADP)
         list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_ethernet.h)
         list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_ethernet.c)
+    endif()
+    if(UA_ENABLE_PUBSUB_ETH_UADP_XDP)
+        if(EXISTS "${XDP_LIBRARY}")
+            list(APPEND open62541_LIBRARIES ${XDP_LIBRARY})
+            list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_ethernet_xdp.c)
+        else()
+            MESSAGE(WARNING "samples in bpf-next directory were not built. Build the bpf-next to use XDP")
+        endif()
     endif()
     if(UA_ENABLE_PUBSUB_MQTT)
         if(WIN32)
