test(PubSub): Add unit test case for XDP connection
 - Unit test case to verify XDP connection
 - Add README_pubsub_TSN.txt for executing the applications and unit tests

Change-Id: I7a05d2dcd8f7881f24a3c5a44560aad1b3971e41

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -131,6 +131,13 @@ endmacro()
 
 add_custom_target(test-verbose COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
 
+if(UA_ENABLE_PUBSUB)
+    if(UA_ENABLE_PUBSUB_ETH_UADP_XDP)
+        list(APPEND open62541_LIBRARIES ${XDP_LIBRARY})
+        list(APPEND LIBS elf)
+    endif()
+endif()
+
 # the unit test are built directly on the open62541 object files. so they can
 # access symbols that are hidden/not exported to the shared library
 
@@ -346,6 +353,11 @@ if(UA_ENABLE_PUBSUB)
             add_executable(check_pubsub_publish_ethernet pubsub/check_pubsub_publish_ethernet.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
             target_link_libraries(check_pubsub_publish_ethernet ${LIBS})
             add_test_valgrind(pubsub_publish_ethernet ${TESTS_BINARY_DIR}/check_pubsub_publish_ethernet)
+        endif()
+        if(UA_ENABLE_PUBSUB_ETH_UADP_XDP)
+            add_executable(check_pubsub_connection_xdp pubsub/check_pubsub_connection_xdp.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
+            target_link_libraries(check_pubsub_connection_xdp ${LIBS})
+            add_test_valgrind(pubsub_connection_xdp ${TESTS_BINARY_DIR}/check_pubsub_connection_xdp)
         endif()
     endif()
     if(UA_ENABLE_PUBSUB_ETH_UADP_ETF)
