refactor(PubSub): Thread based custom manager implementation
 - Thread creation has been integrated with addRepeatedCallback
 - Introduction of RT Fixed offsets
 - Change from Datetime nodes to UInt64 nodes(for RT)

Change-Id: I361a1027dfe633e9b36d25bb74dad6d3a5774e01

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,10 +247,23 @@ option(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING
        "Use a custom implementation for the publish callback handling" OFF)
 mark_as_advanced(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
 
+option(UA_ENABLE_PUBSUB_REALTIME_PUBLISH_ETF
+       "Use ETF implementation for the publish callback handling" OFF)
+mark_as_advanced(UA_ENABLE_PUBSUB_REALTIME_PUBLISH_ETF)
+
 if(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
     if(NOT UA_ENABLE_PUBSUB)
         message(FATAL_ERROR "Custom publish callback handling cannot be used with PubSub function disabled")
     endif()
+endif()
+
+if(UA_ENABLE_PUBSUB_REALTIME_PUBLISH_ETF)
+    if(NOT UA_ENABLE_PUBSUB)
+        message(FATAL_ERROR "ETF publish callback handling cannot be used with PubSub function disabled")
+    endif()
+    if (NOT CMAKE_SYSTEM MATCHES "Linux")
+        message(FATAL_ERROR "ETF is only available on Linux.")
+	endif()
 endif()
 
 option(UA_ENABLE_JSON_ENCODING "Enable Json encoding (EXPERIMENTAL)" OFF)
@@ -783,8 +796,8 @@ endif()
 if(UA_ENABLE_PUBSUB)
     list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_udp.h)
     list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_udp.c)
-    if(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_realtime.c)
+    if(UA_ENABLE_PUBSUB_REALTIME_PUBLISH_ETF)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_realtime_etf.c)
     endif()
     if(UA_ENABLE_PUBSUB_ETH_UADP)
         list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_ethernet.h)
