--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -256,9 +256,9 @@ option(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING
        "Use a custom implementation for the publish callback handling" OFF)
 mark_as_advanced(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
 
-option(UA_ENABLE_PUBSUB_REALTIME_PUBLISH_ETF
-       "Use ETF implementation for the publish callback handling" OFF)
-mark_as_advanced(UA_ENABLE_PUBSUB_REALTIME_PUBLISH_ETF)
+option(UA_ENABLE_PUBSUB_ETH_UADP_ETF
+       "Use ETF implementation for the ETH_UADP publish" OFF)
+mark_as_advanced(UA_ENABLE_PUBSUB_ETH_UADP_ETF)
 
 if(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
     if(NOT UA_ENABLE_PUBSUB)
@@ -266,13 +266,13 @@ if(UA_ENABLE_PUBSUB_CUSTOM_PUBLISH_HANDLING)
     endif()
 endif()
 
-if(UA_ENABLE_PUBSUB_REALTIME_PUBLISH_ETF)
+if(UA_ENABLE_PUBSUB_ETH_UADP_ETF)
     if(NOT UA_ENABLE_PUBSUB)
         message(FATAL_ERROR "ETF publish callback handling cannot be used with PubSub function disabled")
     endif()
     if (NOT CMAKE_SYSTEM MATCHES "Linux")
         message(FATAL_ERROR "ETF is only available on Linux.")
-	endif()
+    endif()
 endif()
 
 option(UA_ENABLE_JSON_ENCODING "Enable Json encoding (EXPERIMENTAL)" OFF)
@@ -803,8 +803,8 @@ endif()
 if(UA_ENABLE_PUBSUB)
     list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_udp.h)
     list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_udp.c)
-    if(UA_ENABLE_PUBSUB_REALTIME_PUBLISH_ETF)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_realtime_etf.c)
+    if(UA_ENABLE_PUBSUB_ETH_UADP_ETF)
+        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_ethernet_etf.c)
     endif()
     if(UA_ENABLE_PUBSUB_ETH_UADP)
         list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_ethernet.h)
