test(PubSub): Add unit test for ethernet ETF functionality
 - Add unit test case for ethernet etf connection
 - Add unit test case for ethernet etf send functionality

Change-Id: I1bfba13b5c80e2b302bc46e1f616af77a1291bc1

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -338,15 +338,23 @@ if(UA_ENABLE_PUBSUB)
     add_test_valgrind(pubsub_multiple_layer ${TESTS_BINARY_DIR}/check_pubsub_multiple_layer)
 
     if(UA_ENABLE_PUBSUB_ETH_UADP)
-	    if(NOT UA_ENABLE_PUBSUB_ETH_UADP_ETF)
-	        add_executable(check_pubsub_connection_ethernet pubsub/check_pubsub_connection_ethernet.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
+        if(NOT UA_ENABLE_PUBSUB_ETH_UADP_ETF)
+            add_executable(check_pubsub_connection_ethernet pubsub/check_pubsub_connection_ethernet.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
             target_link_libraries(check_pubsub_connection_ethernet ${LIBS})
             add_test_valgrind(pubsub_connection_ethernet ${TESTS_BINARY_DIR}/check_pubsub_connection_ethernet)
             add_executable(check_pubsub_publish_ethernet pubsub/check_pubsub_publish_ethernet.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
             target_link_libraries(check_pubsub_publish_ethernet ${LIBS})
             add_test_valgrind(pubsub_publish_ethernet ${TESTS_BINARY_DIR}/check_pubsub_publish_ethernet)
-		endif()
-	endif()
+        endif()
+    endif()
+    if(UA_ENABLE_PUBSUB_ETH_UADP_ETF)
+        add_executable(check_pubsub_connection_ethernet_etf pubsub/check_pubsub_connection_ethernet_etf.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
+        target_link_libraries(check_pubsub_connection_ethernet_etf ${LIBS})
+        add_test_valgrind(pubsub_connection_ethernet_etf ${TESTS_BINARY_DIR}/check_pubsub_connection_ethernet_etf)
+        add_executable(check_pubsub_publish_ethernet_etf pubsub/check_pubsub_publish_ethernet_etf.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
+        target_link_libraries(check_pubsub_publish_ethernet_etf ${LIBS})
+        add_test_valgrind(pubsub_publish_ethernet_etf ${TESTS_BINARY_DIR}/check_pubsub_publish_ethernet_etf)
+    endif()
 
     if(UA_ENABLE_PUBSUB_INFORMATIONMODEL)
         add_executable(check_pubsub_informationmodel pubsub/check_pubsub_informationmodel.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
