--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -32,6 +32,7 @@
 #cmakedefine UA_ENABLE_PUBSUB_DELTAFRAMES
 #cmakedefine UA_ENABLE_PUBSUB_INFORMATIONMODEL
 #cmakedefine UA_ENABLE_PUBSUB_INFORMATIONMODEL_METHODS
+#cmakedefine UA_ENABLE_PUBSUB_INFORMATIONMODEL_RT_VARIABLES
 #cmakedefine UA_ENABLE_DA
 #cmakedefine UA_ENABLE_ENCRYPTION
 #cmakedefine UA_ENABLE_HISTORIZING
