Temporary disable other builds

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,6 @@ trigger:
      - '*'
 
 jobs:
-    - template: ./.azure-pipelines/azure-pipelines-win.yml
-    - template: ./.azure-pipelines/azure-pipelines-dist.yml
+#    - template: ./.azure-pipelines/azure-pipelines-win.yml
+#    - template: ./.azure-pipelines/azure-pipelines-dist.yml
     - template: ./.azure-pipelines/azure-pipelines-qemu.yml
