test2 [ci skip]

--- a/.azure-pipelines/azure-pipelines-qemu.yml
+++ b/.azure-pipelines/azure-pipelines-qemu.yml
@@ -1,10 +1,10 @@
 # -*- mode: yaml -*-
 
 jobs:
-  - template: debootstrap_architecture_template.yml
-    parameters:
-      arch: amd64
-      qemu_arch: x86_64
+  #- template: debootstrap_architecture_template.yml
+  #  parameters:
+  #    arch: amd64
+  #    qemu_arch: x86_64
   - template: debootstrap_architecture_template.yml
     parameters:
       arch: arm64
