--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -200,6 +200,7 @@ if(UA_ENABLE_PUBSUB)
 	add_example(server_pubsub_publisher_iop pubsub/server_pubsub_publisher_iop.c)
 	add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
 	add_example(server_pubsub_subscribe_rt_level pubsub/server_pubsub_subscriber_rt_level.c)
+    add_example(server_pubsub_rt_information_model pubsub/server_pubsub_rt_field_information_model.c)
     if(UA_ENABLE_AMALGAMATION)
         message(WARNING "PubSub subscriber tutorial (preview) can not be used with AMALGAMATION. Skipping tutorial_pubsub_subscribe.")
     else(NOT UA_ENABLE_AMALGAMATION)
