--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -198,13 +198,17 @@ if(UA_ENABLE_PUBSUB)
     add_example(tutorial_pubsub_connection pubsub/tutorial_pubsub_connection.c)
     add_example(tutorial_pubsub_publish pubsub/tutorial_pubsub_publish.c)
 	add_example(server_pubsub_publisher_iop pubsub/server_pubsub_publisher_iop.c)
-	add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
-	add_example(server_pubsub_subscribe_rt_level pubsub/server_pubsub_subscriber_rt_level.c)
-    if(UA_ENABLE_AMALGAMATION)
-        message(WARNING "PubSub subscriber tutorial (preview) can not be used with AMALGAMATION. Skipping tutorial_pubsub_subscribe.")
-    else(NOT UA_ENABLE_AMALGAMATION)
-        add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
-        add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
+    add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
+    if (BUILD_SHARED_LIBS)
+        message(WARNING "PubSub subscriber API is not finished. Build option BUILD_SHARED_LIBS is not supported. Skipping PubSub subscriber examples.")
+    else (NOT BUILD_SHARED_LIBS)
+	    add_example(server_pubsub_subscribe_rt_level pubsub/server_pubsub_subscriber_rt_level.c)
+        if(UA_ENABLE_AMALGAMATION)
+            message(WARNING "PubSub subscriber tutorial (preview) can not be used with AMALGAMATION. Skipping tutorial_pubsub_subscribe.")
+        else(NOT UA_ENABLE_AMALGAMATION)
+            add_example(tutorial_pubsub_subscribe pubsub/tutorial_pubsub_subscribe.c)
+            add_example(pubsub_subscribe_standalone pubsub/pubsub_subscribe_standalone.c)
+        endif()
     endif()
     if(UA_ENABLE_PUBSUB_MQTT)
         if(NOT WIN32)
