added config file implementation
removed unnecessary include

build fix

added newline at eof (travis)

added loading pubsub configuration from file implementation

added config file implementation

removed unnecessary include

build fix

added newline at eof (travis)

added example pubsub binary file

rebase

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -202,6 +202,7 @@ if(UA_ENABLE_PUBSUB)
 	add_example(server_pubsub_publisher_iop pubsub/server_pubsub_publisher_iop.c)
     add_example(server_pubsub_publish_rt_level pubsub/server_pubsub_publisher_rt_level.c)
     add_example(server_pubsub_rt_information_model pubsub/server_pubsub_rt_field_information_model.c)
+    add_example(tutorial_pubsub_configuration pubsub/tutorial_pubsub_configuration.c)
     if (BUILD_SHARED_LIBS)
         message(WARNING "PubSub subscriber API is not finished. Build option BUILD_SHARED_LIBS is not supported. Skipping PubSub subscriber examples.")
     else (NOT BUILD_SHARED_LIBS)
